--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
-    "functions": {
-        "app.py": {
-            "runtime": "@vercel/python@4.1.2",
-            "maxDuration": 30
+    "builds": [
+        {
+            "src": "app.py",
+            "use": "@vercel/python"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
