--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
 openai==1.51.0
-pinecone>=5.0.0
-python-multipart==0.0.6
+supabase-py>=1.0.0
 python-dotenv==1.0.0
-httpx==0.27.0
-mangum==0.17.0
