--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-openai==1.51.0
+openai==1.51.2
 python-dotenv==1.0.0
-# httpx comes as a dependency of openai, so no need to list it explicitly
+httpx==0.27.0
