--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,18 @@
     ],
     "routes": [
         {
+            "src": "/chef",
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/health",
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/",
+            "dest": "/api/index.py"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
